--- a/app/templates/machines-engins.html
+++ b/app/templates/machines-engins.html
@@ -49,8 +49,8 @@
                                 </div>
                                 <div class="ms-auto pageheader-btn">
                                     <ol class="breadcrumb">
-                                        {% comment %} <li class="breadcrumb-item">Logistiques</li> {% endcomment %}
                                         <li class="breadcrumb-item"><a href="logistiques">Logistiques</a></li>
+                                        {% comment %} <li class="breadcrumb-item"><a href="logistiques">Logistiques</a></li> {% endcomment %}
                                         <li class="breadcrumb-item active" aria-current="page">Machines et Engins</li>
                                     </ol>
                                 </div>
