--- a/app/templates/logistiques-list.html
+++ b/app/templates/logistiques-list.html
@@ -10,13 +10,13 @@
 							<!-- PAGE-HEADER -->
 							<div class="page-header">
 								<div>
-									<h1 class="page-title">Logistiques-List</h1>
+									<h1 class="page-title">Logistiques</h1>
 								</div>
 								<div class="ms-auto pageheader-btn">
 									<ol class="breadcrumb">
-										<li class="breadcrumb-item">Apps</li>
-										<li class="breadcrumb-item"><a href="javascript:void(0);">Logistiques</a></li>
-										<li class="breadcrumb-item active" aria-current="page">Logistiques-List</li>
+										<li class="breadcrumb-item"><a href="logistiques">Logistiques</a></li>
+										{% comment %} <li class="breadcrumb-item"><a href="javascript:void(0);">Logistiques</a></li>
+										<li class="breadcrumb-item active" aria-current="page">Logistiques-List</li> {% endcomment %}
 									</ol>
 								</div>
 							</div>
@@ -28,7 +28,7 @@
 									<div class="card">
 										<div class="card-body p-4">
 											<div class="d-flex align-items-center justify-content-between">
-												<h4 class="m-0">All Logistiques</h4>
+												<h4 class="m-0">Toutes les logistiques</h4>
 												<div class="btn-list">
 													<a class="btn btn-outline-primary" href="logistiques">
 														<svg xmlns="http://www.w3.org/2000/svg" class="w-inner-icn" enable-background="new 0 0 24 24" viewBox="0 0 24 24"><path d="M21.5,13h-8.0005493C13.2234497,13.0001831,12.9998169,13.223999,13,13.5v8.0005493C13.0001831,21.7765503,13.223999,22.0001831,13.5,22h8.0006104C21.7765503,21.9998169,22.0001831,21.776001,22,21.5v-8.0006104C21.9998169,13.2234497,21.776001,12.9998169,21.5,13z M21,21h-7v-7h7V21z M10.5,2H2.4993896C2.2234497,2.0001831,1.9998169,2.223999,2,2.5v8.0005493C2.0001831,10.7765503,2.223999,11.0001831,2.5,11h8.0006104C10.7765503,10.9998169,11.0001831,10.776001,11,10.5V2.4993896C10.9998169,2.2234497,10.776001,1.9998169,10.5,2z M10,10H3V3h7V10z M10.5,13H2.4993896C2.2234497,13.0001831,1.9998169,13.223999,2,13.5v8.0005493C2.0001831,21.7765503,2.223999,22.0001831,2.5,22h8.0006104C10.7765503,21.9998169,11.0001831,21.776001,11,21.5v-8.0006104C10.9998169,13.2234497,10.776001,12.9998169,10.5,13z M10,21H3v-7h7V21z M21.5,2h-8.0005493C13.2234497,2.0001831,12.9998169,2.223999,13,2.5v8.0005493C13.0001831,10.7765503,13.223999,11.0001831,13.5,11h8.0006104C21.7765503,10.9998169,22.0001831,10.776001,22,10.5V2.4993896C21.9998169,2.2234497,21.776001,1.9998169,21.5,2z M21,10h-7V3h7V10z"/></svg>
